# tldr

./: .commitlintrc.yaml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.example.toml  justfile  release-please-config.json
.github/workflows/: ci.yml  release.yml
contrib/: tldr-daemon.service
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: ActionItemsList.svelte  ConfigModal.svelte  ConfigWizard.svelte  DateRangePicker.svelte  PriorityUsersForm.svelte  ProductTour.ts  TeamSection.svelte
frontend/src/pages/: InsightsPage.svelte  SummarisePage.svelte
packaging/flatpak/: dev.tldr.App.desktop  dev.tldr.App.metainfo.xml  dev.tldr.App.yml
src/: config.rs  daemon.rs  lib.rs  llm.rs  mattermost.rs  mattermost_types.rs  output.rs  rag.rs  seeding.rs  store.rs  summarise.rs
src/server/: handlers.rs  mod.rs  state.rs  summarise_handlers.rs
tests/: mm_api_regression.rs
