[package]
name = "tldr"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tldr-daemon"
path = "src/bin/tldr-daemon.rs"

[[bin]]
name = "tldr-cli"
path = "src/bin/tldr-cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
urlencoding = "2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
colored = "3"
jiff = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
listenfd = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
termimad = "0.34"
terminal_size = "0.4"
pulldown-cmark = "0.13"
rusqlite = { version = "0.39", features = ["bundled"] }
lancedb = "0.5"
arrow-array = "51"
arrow-schema = "51"
fastembed = "4"
futures = "0.3"
# ort rc.9 (used by fastembed 4.x) bundles ONNX Runtime 1.18 via ort-sys rc.9.
# Pin exactly to prevent Cargo from pulling an incompatible ort-sys version.
ort-sys = "=2.0.0-rc.9"

[dev-dependencies]
serde_yaml = "0.9"
